Added a nested event loop instead of blocking during sync calls.  Partial fix for bug 13724.  (I still must remove ifdef's for the autoproxy code.) r=brendan@meer.net.